Feature/Vas-11619: Multi-domain authentication - Authn & subrogation with internal provider