@@ -1,13 +1,10 @@
 package fr.gouv.vitamui.cas.authentication;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import fr.gouv.vitam.common.PropertiesUtils;
 import fr.gouv.vitam.common.exception.InvalidParseOperationException;
-import fr.gouv.vitam.common.json.JsonHandler;
+import fr.gouv.vitamui.cas.BaseWebflowActionTest;
 import fr.gouv.vitamui.cas.provider.ProvidersService;
 import fr.gouv.vitamui.cas.util.Constants;
 import fr.gouv.vitamui.cas.util.Utils;
-import fr.gouv.vitamui.cas.BaseWebflowActionTest;
 import fr.gouv.vitamui.cas.x509.X509AttributeMapping;
 import fr.gouv.vitamui.commons.api.CommonConstants;
 import fr.gouv.vitamui.commons.api.domain.AddressDto;
@@ -33,8 +30,8 @@ import org.apereo.cas.authentication.principal.PrincipalFactory;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.pac4j.jee.context.JEEContext;
 import org.pac4j.core.context.session.SessionStore;
+import org.pac4j.jee.context.JEEContext;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit4.SpringRunner;
@@ -42,10 +39,16 @@ import org.springframework.test.context.junit4.SpringRunner;
 import java.io.FileNotFoundException;
 import java.security.Principal;
 import java.security.cert.X509Certificate;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 import static fr.gouv.vitamui.commons.api.CommonConstants.IDENTIFIER_ATTRIBUTE;
 import static fr.gouv.vitamui.commons.api.CommonConstants.SUPER_USER_ATTRIBUTE;
+import static fr.gouv.vitamui.commons.api.CommonConstants.SUPER_USER_CUSTOMER_ID_ATTRIBUTE;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
@@ -56,8 +59,6 @@ import static org.mockito.Mockito.when;
 
 /**
  * Tests {@link UserPrincipalResolver}.
- *
- *
  */
 @RunWith(SpringRunner.class)
 @ContextConfiguration(classes = ServerIdentityAutoConfiguration.class)
@@ -68,8 +69,10 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
     private static final String MAIL = "mail";
     private static final String IDENTIFIER = "identifier";
 
-    private static final String USERNAME = "jleleu@test.com";
+    private static final String USERNAME = "user@test.com";
+    private static final String CUSTOMER_ID = "customerId";
     private static final String ADMIN = "admin@test.com";
+    private static final String ADMIN_CUSTOMER_ID = "customer_admin";
     private static final String IDENTIFIER_VALUE = "007";
 
     private static final String PWD = "password";
@@ -111,8 +114,9 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
 
     @Test
     public void testResolveUserSuccessfully() {
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()),
-                eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()),
+            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
 
         val principal = resolver.resolve(new UsernamePasswordCredential(USERNAME, PWD),
             Optional.of(principalFactory.createPrincipal(USERNAME)), Optional.empty());
@@ -120,18 +124,22 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertNull(attributes.get(SUPER_USER_ATTRIBUTE));
+        assertNull(attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
     public void testResolveX509() {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
-        when(identityProviderHelper.findByUserIdentifier(providersService.getProviders(), USERNAME)).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.
+            findByUserIdentifierAndCustomerId(providersService.getProviders(), USERNAME, CUSTOMER_ID)
+        ).thenReturn(Optional.of(provider));
 
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of(IDENTIFIER)),
-            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of(IDENTIFIER)), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))
+        ).thenReturn(userProfile(UserStatusEnum.ENABLED));
         val cert = mock(X509Certificate.class);
         val subjectDn = mock(Principal.class);
         when(subjectDn.getName()).thenReturn(USERNAME);
@@ -140,25 +148,28 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         when(issuerDn.getName()).thenReturn(IDENTIFIER);
         when(cert.getIssuerDN()).thenReturn(issuerDn);
 
-        val principal = resolver.resolve(new X509CertificateCredential(new X509Certificate[] { cert }),
+        val principal = resolver.resolve(new X509CertificateCredential(new X509Certificate[] {cert}),
             Optional.of(principalFactory.createPrincipal(USERNAME)), Optional.empty());
 
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertNull(attributes.get(SUPER_USER_ATTRIBUTE));
+        assertNull(attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
     public void testResolveAuthnDelegation() {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of(USERNAME)),
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of(USERNAME)),
             eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.empty());
         when(providersService.getProviders()).thenReturn(new ArrayList<>());
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()),
+            eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
 
         val principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME),
             Optional.of(principalFactory.createPrincipal(USERNAME)), Optional.empty());
@@ -166,8 +177,9 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertNull(attributes.get(SUPER_USER_ATTRIBUTE));
+        assertNull(attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
@@ -175,10 +187,12 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
         provider.setMailAttribute(MAIL);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of("fake")),
-            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of("fake")), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))
+        ).thenReturn(userProfile(UserStatusEnum.ENABLED));
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.empty());
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()),
+            eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
 
         val princAttributes = new HashMap<String, List<Object>>();
         princAttributes.put(MAIL, Collections.singletonList(USERNAME));
@@ -189,8 +203,9 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertNull(attributes.get(SUPER_USER_ATTRIBUTE));
+        assertNull(attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
@@ -198,10 +213,12 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
         provider.setIdentifierAttribute(IDENTIFIER);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of(IDENTIFIER_VALUE)),
-            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of(IDENTIFIER_VALUE)), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))
+        ).thenReturn(userProfile(UserStatusEnum.ENABLED));
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.empty());
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()),
+            eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
 
         val princAttributes = new HashMap<String, List<Object>>();
         princAttributes.put(IDENTIFIER, Collections.singletonList(IDENTIFIER_VALUE));
@@ -211,8 +228,9 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
 
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertNull(attributes.get(SUPER_USER_ATTRIBUTE));
+        assertNull(attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
@@ -220,10 +238,12 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
         provider.setMailAttribute(MAIL);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of("fake")),
-            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of("fake")), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))
+        ).thenReturn(userProfile(UserStatusEnum.ENABLED));
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.empty());
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME)))
+            .thenReturn(Optional.of(provider));
 
         val princAttributes = new HashMap<String, List<Object>>();
         princAttributes.put(MAIL, Collections.emptyList());
@@ -239,10 +259,12 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
         provider.setIdentifierAttribute(IDENTIFIER_ATTRIBUTE);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.of("fake")),
-            eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))).thenReturn(userProfile(UserStatusEnum.ENABLED));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.of("fake")), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER)))
+        ).thenReturn(userProfile(UserStatusEnum.ENABLED));
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.empty());
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME)))
+            .thenReturn(Optional.of(provider));
 
         val princAttributes = new HashMap<String, List<Object>>();
         princAttributes.put(IDENTIFIER, Collections.emptyList());
@@ -252,83 +274,97 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
 
         assertEquals("nobody", principal.getId());
     }
+
     @Test
     public void testResolveSurrogateUser() {
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()),
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()),
             eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER + "," + CommonConstants.SURROGATION_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.ENABLED));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(null), eq(Optional.empty()),
-            eq(Optional.empty()))).thenReturn(adminProfile());
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(ADMIN_CUSTOMER_ID), eq(null),
+            eq(Optional.empty()), eq(Optional.empty()))).thenReturn(adminProfile());
 
         val credential = new SurrogateUsernamePasswordCredential();
         credential.setUsername(ADMIN);
         credential.setSurrogateUsername(USERNAME);
-        val principal = resolver.resolve(credential, Optional.of(principalFactory.createPrincipal(ADMIN)), Optional.empty());
+        val principal =
+            resolver.resolve(credential, Optional.of(principalFactory.createPrincipal(ADMIN)), Optional.empty());
 
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertEquals(ADMIN, attributes.get(SUPER_USER_ATTRIBUTE).get(0));
+        assertEquals(ADMIN_CUSTOMER_ID, attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE).get(0));
     }
 
     @Test
     public void testResolveAuthnDelegationSurrogate() {
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()),
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()),
             eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER + "," + CommonConstants.SURROGATION_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.ENABLED));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(null), eq(Optional.empty()),
-            eq(Optional.empty()))).thenReturn(adminProfile());
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(ADMIN_CUSTOMER_ID), eq(null),
+            eq(Optional.empty()), eq(Optional.empty()))).thenReturn(adminProfile());
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.of(USERNAME));
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(new IdentityProviderDto()));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME)))
+            .thenReturn(Optional.of(new IdentityProviderDto()));
 
-        val  principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME), Optional.of(principalFactory.createPrincipal(ADMIN)), Optional.empty());
+        val principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME),
+            Optional.of(principalFactory.createPrincipal(ADMIN)), Optional.empty());
 
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertEquals(ADMIN, attributes.get(SUPER_USER_ATTRIBUTE).get(0));
+        assertEquals(ADMIN_CUSTOMER_ID, attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE).get(0));
     }
 
     @Test
     public void testResolveAuthnDelegationSurrogateMailAttribute() {
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()),
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()),
             eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER + "," + CommonConstants.SURROGATION_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.ENABLED));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(null), eq(Optional.empty()),
-            eq(Optional.empty()))).thenReturn(adminProfile());
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(ADMIN_CUSTOMER_ID),
+            eq(null), eq(Optional.empty()), eq(Optional.empty()))).thenReturn(adminProfile());
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.of(USERNAME));
         val provider = new IdentityProviderDto();
         provider.setMailAttribute(MAIL);
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME)))
+            .thenReturn(Optional.of(provider));
 
         val princAttributes = new HashMap<String, List<Object>>();
         princAttributes.put(MAIL, Collections.singletonList(ADMIN));
 
-        val  principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME),
+        val principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME),
             Optional.of(principalFactory.createPrincipal("fake", princAttributes)), Optional.empty());
 
         assertEquals(USERNAME_ID, principal.getId());
         final Map<String, List<Object>> attributes = principal.getAttributes();
         assertEquals(USERNAME, attributes.get(CommonConstants.EMAIL_ATTRIBUTE).get(0));
-        assertEquals(Arrays.asList(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
+        assertEquals(List.of(ROLE_NAME), attributes.get(CommonConstants.ROLES_ATTRIBUTE));
         assertEquals(ADMIN, attributes.get(SUPER_USER_ATTRIBUTE).get(0));
+        assertEquals(ADMIN_CUSTOMER_ID, attributes.get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE).get(0));
     }
 
     @Test
     public void testResolveAuthnDelegationSurrogateMailAttributeNoMail() {
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()),
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()),
             eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER + "," + CommonConstants.SURROGATION_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.ENABLED));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(null), eq(Optional.empty()),
-            eq(Optional.empty()))).thenReturn(adminProfile());
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(ADMIN), eq(ADMIN_CUSTOMER_ID), eq(null),
+            eq(Optional.empty()), eq(Optional.empty()))).thenReturn(adminProfile());
         when(sessionStore.get(any(JEEContext.class), eq(Constants.SURROGATE))).thenReturn(Optional.of(USERNAME));
         val provider = new IdentityProviderDto();
         provider.setMailAttribute(MAIL);
-        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME))).thenReturn(Optional.of(provider));
+        when(identityProviderHelper.findByTechnicalName(eq(providersService.getProviders()), eq(PROVIDER_NAME)))
+            .thenReturn(Optional.of(provider));
 
-        val  principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME), Optional.of(principalFactory.createPrincipal("fake")), Optional.empty());
+        val principal = resolver.resolve(new ClientCredential(null, PROVIDER_NAME),
+            Optional.of(principalFactory.createPrincipal("fake")), Optional.empty());
 
         assertEquals("nobody", principal.getId());
     }
@@ -336,24 +372,31 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
     @Test
     public void testResolveAddressDeserializeSuccessfully() {
         AuthUserDto authUserDto = userProfile(UserStatusEnum.ENABLED);
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(null), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
-                .thenReturn(authUserDto);
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID), eq(null),
+            eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
+            .thenReturn(authUserDto);
 
         val principal = resolver.resolve(new UsernamePasswordCredential(USERNAME, PWD),
             Optional.of(principalFactory.createPrincipal(USERNAME)), Optional.empty());
 
         assertEquals(USERNAME_ID, principal.getId());
-        AddressDto addressDto = (AddressDto) ((CasJsonWrapper) principal.getAttributes().get(CommonConstants.ADDRESS_ATTRIBUTE).get(0)).getData();
+        AddressDto addressDto =
+            (AddressDto) ((CasJsonWrapper) principal.getAttributes().get(CommonConstants.ADDRESS_ATTRIBUTE)
+                .get(0)).getData();
         assertThat(addressDto).isEqualToComparingFieldByField(authUserDto.getAddress());
         assertNull(principal.getAttributes().get(SUPER_USER_ATTRIBUTE));
+        assertNull(principal.getAttributes().get(SUPER_USER_CUSTOMER_ID_ATTRIBUTE));
     }
 
     @Test
     public void testNoUser() {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
-        when(identityProviderHelper.findByUserIdentifier(providersService.getProviders(), USERNAME)).thenReturn(Optional.of(provider));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
+        when(identityProviderHelper
+            .findByUserIdentifierAndCustomerId(providersService.getProviders(), USERNAME, CUSTOMER_ID))
+            .thenReturn(Optional.of(provider));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
             .thenReturn(null);
 
         assertNull(resolver.resolve(new UsernamePasswordCredential(USERNAME, PWD),
@@ -364,8 +407,11 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
     public void testDisabledUser() {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
-        when(identityProviderHelper.findByUserIdentifier(providersService.getProviders(), USERNAME)).thenReturn(Optional.of(provider));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
+        when(identityProviderHelper
+            .findByUserIdentifierAndCustomerId(providersService.getProviders(), USERNAME, CUSTOMER_ID))
+            .thenReturn(Optional.of(provider));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.DISABLED));
 
         assertNull(resolver.resolve(new UsernamePasswordCredential(USERNAME, PWD),
@@ -376,8 +422,11 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
     public void testUserCannotLogin() {
         val provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
-        when(identityProviderHelper.findByUserIdentifier(providersService.getProviders(), USERNAME)).thenReturn(Optional.of(provider));
-        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
+        when(identityProviderHelper
+            .findByUserIdentifierAndCustomerId(providersService.getProviders(), USERNAME, CUSTOMER_ID))
+            .thenReturn(Optional.of(provider));
+        when(casExternalRestClient.getUser(any(ExternalHttpContext.class), eq(USERNAME), eq(CUSTOMER_ID),
+            eq(PROVIDER_ID), eq(Optional.empty()), eq(Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER))))
             .thenReturn(userProfile(UserStatusEnum.BLOCKED));
 
         assertNull(resolver.resolve(new UsernamePasswordCredential(USERNAME, PWD),
@@ -404,9 +453,9 @@ public final class UserPrincipalResolverTest extends BaseWebflowActionTest {
         address.setCountry("France");
         user.setAddress(address);
         val profile = new ProfileDto();
-        profile.setRoles(Arrays.asList(new Role(ROLE_NAME)));
+        profile.setRoles(List.of(new Role(ROLE_NAME)));
         val group = new GroupDto();
-        group.setProfiles(Arrays.asList(profile));
+        group.setProfiles(List.of(profile));
         user.setProfileGroup(group);
         user.setCustomerId("customerId");
         return user;
